--- a/index.html
+++ b/index.html
@@ -155,5 +155,12 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/script.js"></script>
+  <div class="error-message">
+    <h2 id="cvv-error">Insert 3 Security Digits from the back of your card</h2>
+    <h2 id="zip-error">Insert valid 5 number ZIP Code</h2>
+    <h2 id="cc-error">Insert a valid 13 to 15 digits credit card number</h2>
+    <h2 id="email-error">Insert valid email</h2>
+    <h2 id="name-error">Insert a name</h2>
+  </div>
 </body>
 </html>
